updated a lil bit

--- a/33/33.md
+++ b/33/33.md
@@ -64,6 +64,21 @@ Feel free to read **[this](https://pillow.readthedocs.io/en/stable/handbook/conc
 
 Now that we checked out what `beer2.jpg` looks like, let's try mangling the pixels in the image. 
 
+PIL's getdata returns an object containing pixel values. 
+
+To convert it to a normal sequence you need to use list.
+
+
+```python
+img.getdata()
+<ImagingCore at 0x78a0ddf4ac50>
+```
+
+```python
+pixels = list(img.getdata())
+[1, 43, 7, 13, 7, 1, 1, 85, 25, 85, 25, 1, 91, 103, 31, 37, 1, 13, 169, 1, 37, 13, 193, 13, 1, 193,...]
+```
+
 
 Changing the URL to **[gremlins](www.kohsamui:thailand@pythonchallenge.com/pc/rock/gremlins.html)** takes you to the end.
 
@@ -73,9 +88,11 @@ You've now completed the pythonchallenge.
 
 # References 
 
-I could find only 2 people who solved each and every problem from pythonchallenge 
+I could find only 2 people who solved each and every problem from pythonchallenge.
 
-They both seem to Chinese, what a coincidence that's why a lot of skilled programmers are Chinese lol
+They both seem be Chinese, what a coincidence. 
+
+That's probably why a lot of skilled programmers are Chinese lol.
 
 
 1.  https://www.cnblogs.com/nicole-zhang/p/15649071.html
