Show images on markdown

--- a/23/23.md
+++ b/23/23.md
@@ -1,6 +1,6 @@
 # Level23 
 
-**[bonus.jpg](/23/bonus.jpg)** an image of a cow is given.
+**![bonus.jpg](/23/bonus.jpg)** an image of a cow is given.
 
 
 The HTML title is `what is this module?`.
@@ -15,7 +15,7 @@ These are the comments in the page-source.
 ```
 
 
-It looks like the level has something to do with `this`. Python has a module named **[this]** which doesn't have a document. 
+It looks like the level has something to do with `this`. Python has a module named **[this](https://stackoverflow.com/questions/37301273/attributes-of-python-module-this)** which doesn't have a document. 
 
 
 ```
