Added line breaks

--- a/23/23.md
+++ b/23/23.md
@@ -1,12 +1,15 @@
 # Level23 
 
-**![bonus.jpg](/23/bonus.jpg)** an image of a cow is given.
+**![bonus.jpg](/23/bonus.jpg)**
+
+
+An image of a cow is given.
 
 
 The HTML title is `what is this module?`.
 
 
-These are the comments in the page-source. 
+Here are the comments in the page-source. 
 
 
 ```html
@@ -15,7 +18,9 @@ These are the comments in the page-source.
 ```
 
 
-It looks like the level has something to do with `this`. Python has a module named **[this](https://stackoverflow.com/questions/37301273/attributes-of-python-module-this)** which doesn't have a document. 
+It looks like the level has something to do with `this`. 
+
+Python has a module named **[this](https://stackoverflow.com/questions/37301273/attributes-of-python-module-this)** which doesn't have a document. 
 
 
 ```
@@ -44,7 +49,9 @@ Namespaces are one honking great idea -- let's do more of those!
 ```
 
 
-The this module in Python is an easter egg module. It's written by **[Tim Peters](https://en.wikipedia.org/wiki/Tim_Peters_(software_engineer))** the guy who wrote `Timsort` the sorting algorithm used in Python. 
+The `this` module in Python is an easter egg module. 
+
+It's written by **[Tim Peters](https://en.wikipedia.org/wiki/Tim_Peters_(software_engineer))** the guy who wrote `Timsort` the sorting algorithm used in Python. 
 
 
 Let's check the `this.py` code out. Here's what `this.py` looks like.
